<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen1_bg"
    tools:context=".ui.fragment.onboarding.screens.Screen1Fragment">

    <ImageView
        android:id="@+id/ivScreen1"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/screen_img_description"
        android:cropToPadding="true"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screen1_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivScreen1">

        <TextView
            android:id="@+id/txtScreen1TitlePt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtScreen1TitlePt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtScreen1Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/screen1_desc"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/next"
        android:textColor="@color/next_btn"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>