<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen4_bg"
    tools:context=".ui.fragment.onboarding.screens.Screen4Fragment">

    <!-- Guidelines for consistent vertical margins -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <!-- Image with 1:1 aspect ratio -->
    <ImageView
        android:id="@+id/ivScreen4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/screen_img_description"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/screen4_img"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toTopOf="@id/layoutTextContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Text content -->
    <LinearLayout
        android:id="@+id/layoutTextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/ivScreen4"
        app:layout_constraintBottom_toTopOf="@id/btnFinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtScreen4Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scrren4_title"
            android:fontFamily="@font/roboto_medium"
            android:textSize="26sp"
            android:textAlignment="center"
            android:textColor="@color/text_dark" />

        <TextView
            android:id="@+id/txtScreen4Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen4_description"
            android:fontFamily="@font/roboto_light"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/text_dark"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <!-- Finish button -->
    <TextView
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textColor="@color/next_btn"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
